--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\micke\\AppData\\Roaming\\NetBeans\\12.0\\tomcat90.properties
-j2ee.server.home=W:/Programming/apache-tomcat-9.0.56
-j2ee.server.instance=tomcat90:home=W:\\Programming\\apache-tomcat-9.0.56
+j2ee.server.home=C:/apache-tomcat-9.0.56
+j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.56
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
